@@ -11,6 +11,12 @@
 	PR c++/80244 - ICE with attribute in template alias.
 	* tree.c (strip_typedefs): Handle UNDERLYING_TYPE.
 
+	2017-04-10  Marek Polacek  <polacek@redhat.com>
+
+	PR sanitizer/80348
+	* typeck.c (cp_build_binary_op): Use NULL_TREE instead of NULL.  Set
+	ORIG_TYPE earlier and not only when shortening.
+
 	2017-04-07  Marek Polacek  <polacek@redhat.com>
 
 	PR sanitizer/80348
